--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,8 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: deploy-ss
-  namespace: samsung
+  name: hihi
 spec:
   replicas: 3
   selector:
@@ -24,7 +23,6 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ss-lb
-  namespace: samsung
 spec:
   ports:
   - name: ss-port
